==> tendai22/cp-mega88-pico/src/led_avr.c <==
/*
 * Copyright (c) 2019, Takashi TOYOSHIMA <toyoshim@gmail.com>
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *
 * - Redistributions of source code must retain the above copyright notice,
 *   this list of conditions and the following disclaimer.
 *
 * - Redistributions in binary form must reproduce the above copyright notice,
 *   this list of conditions and the following disclaimer in the documentation
 *   and/or other materials provided with the distribution.
 *
 * - Neither the name of the authors nor the names of its contributors may be
 *   used to endorse or promote products derived from this software with out
 *   specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
 * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
 * ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE
 * LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUE
 * NTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE
 * GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
 * HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
 * LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
 * OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
 * DAMAGE.
 */

#include "hardware_config.h"
#include "led.h"

#include <avr/io.h>
#include <avr/interrupt.h>

static volatile unsigned char blink = 0;

#if defined(MCU_ATMEGA328)
#define PINC7 PIN7
#endif //defined(MCU_ATMEGA328)

ISR
(TIMER1_COMPA_vect)
{
  if (blink)
    DDRC ^= _BV(PINC7);
}

void led_init(void) {
  PORTC &= ~_BV(PINC7);
  led_off();
  TCCR1A = 0;
  TCCR1B = _BV(WGM12) | _BV(CS12) | _BV(CS10);
  OCR1AH = 0x10;
  OCR1AL = 0x00;
  TIMSK1 |= _BV(OCIE1A);
}

void led_on(void) {
  blink = 0;
  DDRC |= _BV(PINC7);
}

void led_off(void) {
  blink = 0;
  DDRC &= ~_BV(PINC7);
}

void led_blink(void) {
  blink = 1;
}
